--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "hugofy",
   "main": "./lib/hugofy",
-  "version": "0.0.0",
-  "description": "A short description of your package",
+  "version": "0.0.1",
+  "description": "A Hugo Static Website Generator package for Atom",
   "keywords": [
   ],
   "activationCommands": {
-    "atom-workspace": ["hugofy:setTheme","hugofy:startServer","hugofy:newPost"]
+    "atom-workspace": ["hugofy:stopServer","hugofy:startServer","hugofy:newPost"]
   },
-  "repository": "https://github.com/atom/hugofy",
+  "repository": "https://github.com/felipetoffolo1/hugofy-atom",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
